--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -1,2 +1,9 @@
 Flask==1.0.2
 gunicorn==19.9.0
+click==6.7
+itsdangerous==0.24
+Jinja2>=2.10
+MarkupSafe==1.0
+pytz==2017.2
+requests==2.13.0
+Werkzeug>=0.14
