Prepping transfer model for ML deployment

--- a/tensorflow/satellite_transfer_model/config.yaml
+++ b/tensorflow/satellite_transfer_model/config.yaml
@@ -1,5 +1,5 @@
 trainingInput:
-  scaleTier: BASIC_GPU # BASIC | BASIC_GPU | BASIC_TPU | STANDARD_1 | PREMIUM_1
+  scaleTier: STANDARD_1 # BASIC | BASIC_GPU | BASIC_TPU | STANDARD_1 | PREMIUM_1
   pythonVersion: '3.5'
   runtimeVersion: '1.10'
   region: us-west1
