--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
-# Required packages
 google-cloud-datastore==1.7.1
 google-cloud-storage==1.13.0
-# numpy==1.15.4
-# pandas==0.23.4
 Pillow==5.3.0
 planet==1.2.1
 requests==2.20.1
+Click==7.0
+google-api-python-client==1.7.4
+google-cloud-automl==0.1.1
+google-cloud-core==0.28.1
+google-cloud-datastore==1.7.1
+google-cloud-storage==1.13.0
+ipython==7.1.1
+libtiff==0.4.2
+numpy==1.15.4
+oauth2client==4.1.3
+pandas==0.23.4
+tensorboard==1.12.0
+tensorflow==1.12.0
+tensorflow-hub==0.1.1
+Werkzeug==0.14.1
