--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,8 @@
-Click==7.0
-Flask==1.0.2
-google-api-python-client==1.7.4
-google-cloud-automl==0.1.1
-google-cloud-datastore==1.7.1
-google-cloud-storage==1.13.0
-gunicorn==19.9.0
-ipython==7.1.1
-itsdangerous==0.24
-Jinja2>=2.10
-libtiff==0.4.2
-MarkupSafe==1.0
-numpy==1.15.4
-oauth2client==4.1.3
-pandas==0.23.4
-Pillow==5.3.0
-planet==1.2.1
-pytz==2017.2
-requests==2.13.0
-requests==2.20.1
-tensorboard==1.12.0
-tensorflow-hub==0.1.1
-tensorflow==1.12.0
-Werkzeug==0.14
+google-api-python-client>=1.7.4
+google-cloud-automl>=0.1.1
+google-cloud-datastore>=1.7.1
+google-cloud-storage>=1.13.0
+oauth2client>=4.1.3
+tensorboard>=1.12.0
+tensorflow-hub>=0.1.1
+tensorflow>=1.10.0
