--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# TensorFlow and Pipelines
 google-api-python-client>=1.7.4
 google-cloud-automl>=0.1.1
 google-cloud-datastore>=1.7.1
@@ -6,3 +7,14 @@ oauth2client>=4.1.3
 tensorboard>=1.12.0
 tensorflow-hub>=0.1.1
 tensorflow>=1.10.0
+
+# Web app
+Flask==1.0.2
+gunicorn==19.9.0
+click==6.7
+itsdangerous==0.24
+Jinja2>=2.10
+MarkupSafe==1.0
+pytz==2017.2
+requests==2.13.0
+Werkzeug>=0.14
