--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,9 @@
-# TensorFlow and Pipelines
-google-api-python-client>=1.7.4
-google-cloud-automl>=0.1.1
-google-cloud-datastore>=1.7.1
-google-cloud-storage>=1.13.0
-oauth2client>=4.1.3
-tensorboard>=1.12.0
-tensorflow-hub>=0.1.1
-tensorflow>=1.10.0
-
-# Web app
-Flask==1.0.2
-gunicorn==19.9.0
-click==6.7
-itsdangerous==0.24
-Jinja2>=2.10
-MarkupSafe==1.0
-pytz==2017.2
+google-api-python-client==1.7.4
+google-cloud-automl==0.1.1
+google-cloud-datastore==1.7.1
+google-cloud-storage==1.13.0
+Pillow==5.0.0
 requests==2.13.0
-Werkzeug>=0.14
+tensorboard==1.12.0
+tensorflow==1.12.0
+tensorflow-hub==0.1.1
