Ignoring sample data files from Beam pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,5 @@ tensorflow/flowers_model/checkpoint/
 tensorflow/mnist_model/checkpoints/
 tensorflow/satellite_model/checkpoints/
 tensorflow/satellite_transfer_model/checkpoints/
+dataflow/image_processing/formats.csv-00000-of-00001
+dataflow/image_processing/beam-temp-formats.csv-48bcdef8f76e11e890d8f218981473e2/a65bd430-c648-48dc-b848-df180e54f9e2.formats.csv
